15 Aggregation Binding with Factory Functions

--- a/Data Binding/14 Expression Binding/view/App.view.xml
+++ b/Data Binding/14 Expression Binding/view/App.view.xml
@@ -1,7 +1,6 @@
 <mvc:View xmlns="sap.m"
 	xmlns:form="sap.ui.layout.form"
 	xmlns:l="sap.ui.layout"
-	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc" controllerName="sap.ui.demo.db.controller.App">
 	<Panel headerText="{i18n>panel1HeaderText}" class="sapUiResponsiveMargin" width="auto">
 		<form:SimpleForm editable="true" layout="ColumnLayout">
@@ -42,14 +41,29 @@
 		</content>
 	</Panel>
 	<Panel headerText="{i18n>panel3HeaderText}" class="sapUiResponsiveMargin" width="auto">
-		<List id="ProductList" headerText="{i18n>productListTitle}" items="{
-				path: 'products>/Products',
-				factory: '.productListFactory'
-			}">
-			<dependents>
-				<core:Fragment fragmentName="sap.ui.demo.db.view.ProductSimple" type="XML"/>
-				<core:Fragment fragmentName="sap.ui.demo.db.view.ProductExtended" type="XML"/>
-			</dependents>
+		<List headerText="{i18n>productListTitle}" items="{products>/Products}">
+			<items>
+				<ObjectListItem press=".onItemSelected" type="Active" title="{products>ProductName}" number="{
+						parts: [
+							{path: 'products>UnitPrice'},
+							{path: '/currencyCode'}
+						],
+						type: 'sap.ui.model.type.Currency',
+						formatOptions: { showMeasure: false }
+					}" numberUnit="{/currencyCode}" numberState="{= ${products>UnitPrice} > ${/priceThreshold} ? 'Error' : 'Success' }">
+					<attributes>
+						<ObjectAttribute text="{products>QuantityPerUnit}"/>
+						<ObjectAttribute title="{i18n>stockValue}" text="{
+								parts: [
+									{path: 'products>UnitPrice'},
+									{path: 'products>UnitsInStock'},
+									{path: '/currencyCode'}
+								],
+								formatter: '.formatStockValue'
+							}"/>
+					</attributes>
+				</ObjectListItem>
+			</items>
 		</List>
 	</Panel>
 	<Panel id="productDetailsPanel" headerText="{i18n>panel4HeaderText}" class="sapUiResponsiveMargin" width="auto">
